--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -44,6 +44,7 @@ sections:
         items:
           - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Övervaka händelser i virtuella datorer med logiska appar</a>
           - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Ändra storlek på överförda bilder</a>
+          - html: <a href="/azure/event-grid/ensure-tags-exists-on-new-virtual-machines">Integrera Azure Automation med Event Grid</a>
   - title: Referens
     items:
       - type: list
