--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -22,6 +22,8 @@
       href: monitor-virtual-machine-changes-event-grid-logic-app.md
     - name: Ändra storlek på överförda bilder
       href: resize-images-on-storage-blob-upload-event.md
+    - name: Utlösa Automation-runbook
+      href: ensure-tags-exists-on-new-virtual-machines.md
 - name: Koncept
   items:
     - name: Event Grid-begrepp
