--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -49,5 +49,7 @@ sections:
         items:
           - title: Kommandorad
             html: '<p><a href="/cli/azure/container">Azure CLI</a></p><p><a href="/powershell/module/azurerm.containerinstance#container_instances">PowerShell</a></p>'
+          - title: Språk
+            html: <p><a href="/dotnet/api/overview/azure/containerinstances">.NET</a></p><p><a href="/python/api/overview/azure/containerinstance">Python</a></p><p><a href="/java/api/overview/azure/containerinstance">Java</a></p><p><a href="/javascript/api/overview/azure/containerinstance">Node.js</a></p>
           - title: REST
-            html: <p><a href="/rest/api/container-instances">REST API-referens</a></p>
+            html: <p><a href="/rest/api/container-instances">REST API-referens</a></p><p><a href="/azure/templates/microsoft.containerinstance/containergroups">Resource Manager-mall</a></p>
