--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -135,13 +135,29 @@
         - name: Planera kapacitet för VMware-replikering till Azure
           href: site-recovery-plan-capacity-vmware.md
         - name: Distributionsplaneringsverktyget för VMware-replikering till Azure
-          href: site-recovery-deployment-planner.md
-        - name: Kapacitetsplanering för Hyper-V-replikering till Azure
-          href: site-recovery-capacity-planner.md
-        - name: Kapacitetsplaneringsverktyg för Hyper-V-replikering till Azure
-          href: site-recovery-capacity-planning-for-hyper-v-replication.md
+          href: null
+          items:
+            - name: Översikt och förutsättningar
+              href: site-recovery-deployment-planner.md
+            - name: Kör distributionshanteraren
+              href: site-recovery-vmware-deployment-planner-run.md
+            - name: Analysera den genererade rapporten
+              href: site-recovery-vmware-deployment-planner-analyze-report.md
+            - name: Analysera rapporten med den beräknade kostnaden för haveriberedskap
+              href: site-recovery-vmware-deployment-planner-cost-estimation.md
         - name: Skala ut processervrar för VMware-replikering
           href: site-recovery-vmware-to-azure-manage-scaleout-process-server.md
+        - name: Distributionshanteraren och verktyget för Hyper-V-replikering till Azure
+          href: null
+          items:
+            - name: Översikt och förutsättningar
+              href: site-recovery-hyper-v-deployment-planner.md
+            - name: Kör distributionshanteraren
+              href: site-recovery-hyper-v-deployment-planner-run.md
+            - name: Analysera den genererade rapporten
+              href: site-recovery-hyper-v-deployment-planner-analyze-report.md
+            - name: Analysera rapporten med den beräknade kostnaden för haveriberedskap
+              href: site-recovery-hyper-v-deployment-planner-cost-estimation.md
         - name: Prestandaskalningstester för Hyper-V-replikering mellan lokala platser
           href: site-recovery-performance-and-scaling-testing-on-premises-to-on-premises.md
     - name: Konfigurera
