Commit translated content

--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -1,29 +1,53 @@
 - name: Dokumentation om Azure HDInsight
   href: /azure/hdinsight
-- name: Företagssäkerhet på HDInsight
+- name: Företagssäkerhet
   items:
     - name: Översikt
       href: apache-domain-joined-introduction.md
-    - name: Planera domänansluten HDInsight
+    - name: Planera för företagssäkerhet
       href: apache-domain-joined-architecture.md
-    - name: Versionshantering för komponenter
-      href: ../hdinsight-component-versioning.md
-      maintainContext: true
-- name: Kom igång
-  items:
-    - name: Konfigurera domänansluten HDInsight
+    - name: Konfigurera företagssäkerhet i HDInsight
       href: apache-domain-joined-configure.md
-    - name: Konfigurera domänansluten HDInsight med hjälp av Azure AD DS
+    - name: Konfigurera företagssäkerhet i HDInsight med Azure AD DS
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Konfigurera Hive-principer
       href: apache-domain-joined-run-hive.md
     - name: Kapacitetsplanering
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
-- name: Gör så här för att
-  items:
-    - name: Hantera kluster
+    - name: Hantera kluster med företagssäkerhet
       href: apache-domain-joined-manage.md
+- name: Skydda data
+  href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+  maintainContext: true
+- name: Nätverksåtkomst
+  items:
+    - name: HDInsight i ett virtuellt Azure-nätverk
+      href: ../hdinsight-extend-hadoop-virtual-network.md
+      maintainContext: true
+    - name: Ansluta HDInsight till det lokala nätverket
+      href: ../connect-on-premises-network.md
+      maintainContext: true
+    - name: Skapa HBase-kluster i ett virtuellt Azure-nätverk
+      href: ../hbase/apache-hbase-provision-vnet.md
+      maintainContext: true
+    - name: Replikering av HBase-kluster i ett virtuellt Azure-nätverk
+      href: ../hbase/apache-hbase-replication.md
+      maintainContext: true
+- name: Övervaka med OMS
+  items:
+    - name: Använda Azure Log Analytics
+      href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+      maintainContext: true
+    - name: Klusterspecifika instrumentpaneler
+      href: ../hdinsight-hadoop-oms-log-analytics-management-solutions.md
+      maintainContext: true
+    - name: Använda frågor med Log Analytics
+      href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+      maintainContext: true
+    - name: Övervaka klusterprestanda
+      href: ../hdinsight-key-scenarios-to-monitor.md
+      maintainContext: true
 - name: Referens
   items:
     - name: Kodexempel
