Commit translated content

--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -34,6 +34,8 @@
       href: how-to-install-iot-core.md
 - name: Koncept
   items:
+    - name: IoT Edge-ordlista
+      href: iot-edge-glossary.md
     - name: IoT Edge-moduler
       href: iot-edge-modules.md
       items:
