--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -142,6 +142,10 @@
               href: app-insights-proactive-failure-diagnostics.md
             - name: Prestandaavvikelser
               href: app-insights-proactive-performance-diagnostics.md
+            - name: Spårningsförsämring
+              href: app-insights-proactive-trace-severity.md
+            - name: Undantagsvolym
+              href: app-insights-proactive-exception-volume.md
         - name: Skapa en resurs
           href: app-insights-create-new-resource.md
     - name: Analysera
