--- a/articles/machine-learning/preview/toc.yml
+++ b/articles/machine-learning/preview/toc.yml
@@ -128,6 +128,8 @@
           href: scenario-tdsp-classifying-us-incomes.md
         - name: Klassificering av avbildning med hjälp av CNTK
           href: scenario-image-classification-using-cntk.md
+        - name: Djupinlärning för förutsägande underhåll
+          href: scenario-deep-learning-for-predictive-maintenance.md
 - name: Referens
   items:
     - name: Förberedelse av data
