--- a/articles/service-fabric/index.yml
+++ b/articles/service-fabric/index.yml
@@ -15,11 +15,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 11/03/2017
   ms.author: carolz
-  ms.openlocfilehash: b0b7740f70f2671bf26c1d2912b99369b1429534
-  ms.sourcegitcommit: f67f0bda9a7bb0b67e9706c0eb78c71ed745ed1d
+  ms.openlocfilehash: d50c30ccb4fe6d5d6c56edb2a53d4822796af6d4
+  ms.sourcegitcommit: 094061b19b0a707eace42ae47f39d7a666364d58
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 11/20/2017
+  ms.lasthandoff: 12/08/2017
 abstract:
   description: "Azure Service Fabric är en distribuerad systemplattform som gör det enkelt att paketera, distribuera och hantera skalbara och tillförlitliga mikrotjänster och behållare. Utvecklare och administratörer kan undvika komplexa infrastrukturproblem och fokusera på att implementera verksamhetskritiska, krävande arbetsbelastningar som är skalbara, tillförlitliga och hanterbara. Lär dig hur du använder Azure Service Fabric med hjälp av våra snabbstarter, självstudier och exempel."
 sections:
@@ -36,8 +36,12 @@ sections:
       href: service-fabric-quickstart-dotnet
     - image:
         src: https://docs.microsoft.com/media/logos/logo_Java.svg
-      text: Java
-      href: service-fabric-quickstart-java
+      text: Java (Reliable Services)
+      href: service-fabric-quickstart-java-reliable-services
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_Java.svg
+      text: Java (Spring Boot)
+      href: service-fabric-quickstart-java-spring-boot
     - image:
         src: https://docs.microsoft.com/media/logos/logo_linux.svg
       text: "Linux-behållare"
