--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -83,12 +83,6 @@
           href: concepts-compatibility.md
         - name: Programutveckling
           href: concepts-database-application-development.md
-    - name: Migrera databasen
-      items:
-        - name: Dumpa och återställa
-          href: concepts-migrate-dump-restore.md
-        - name: Importera och exportera
-          href: concepts-migrate-import-export.md
 - name: Instruktionsguider
   items:
     - name: Hantera en server
@@ -107,6 +101,12 @@
           href: howto-restore-server-portal.md
         - name: Azure CLI
           href: howto-restore-server-cli.md
+    - name: Migrera en databas
+      items:
+        - name: Dumpa och återställa
+          href: concepts-migrate-dump-restore.md
+        - name: Importera och exportera
+          href: concepts-migrate-import-export.md
     - name: Anslut program
       items:
         - name: Skapa användare
