--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -89,7 +89,7 @@
           href: howto-restore-server-portal.md
         - name: Azure CLI
           href: howto-restore-server-cli.md
-    - name: Migrera databasen
+    - name: Migrera en databas
       items:
         - name: Dumpa och återställa
           href: howto-migrate-using-dump-and-restore.md
