--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -146,6 +146,12 @@
               href: app-insights-proactive-trace-severity.md
             - name: Undantagsvolym
               href: app-insights-proactive-exception-volume.md
+            - name: Minnesläcka
+              href: app-insights-proactive-potential-memory-leak.md
+            - name: Resursutnyttjande
+              href: app-insights-proactive-low-utilization-cloud-resources.md
+            - name: Säkerhetsidentifiering
+              href: app-insights-proactive-application-security-detection-pack.md
         - name: Skapa en resurs
           href: app-insights-create-new-resource.md
     - name: Analysera
