--- a/articles/data-factory/v1/toc.yml
+++ b/articles/data-factory/v1/toc.yml
@@ -179,6 +179,8 @@
           href: data-factory-troubleshoot.md
         - name: Felsöka problem med gateway för datahantering
           href: data-factory-troubleshoot-gateway-issues.md
+    - name: Anropa SSIS-paket med hjälp av en lagrad proceduraktivitet
+      href: how-to-invoke-ssis-package-stored-procedure-activity.md
 - name: Referens
   items:
     - name: Kodexempel
