--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -4,18 +4,18 @@
   items:
     - name: Översikt
       href: apache-domain-joined-introduction.md
-    - name: Planera för företagssäkerhet
+    - name: Planera för domänanslutna kluster
       href: apache-domain-joined-architecture.md
-    - name: Konfigurera företagssäkerhet i HDInsight
+    - name: Konfigurera en domänansluten testmiljö
       href: apache-domain-joined-configure.md
-    - name: Konfigurera företagssäkerhet i HDInsight med Azure AD DS
+    - name: Konfigurera domänanslutna kluster med Azure AD DS
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Konfigurera Hive-principer
       href: apache-domain-joined-run-hive.md
     - name: Kapacitetsplanering
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
-    - name: Hantera kluster med företagssäkerhet
+    - name: Hantera domänanslutna kluster
       href: apache-domain-joined-manage.md
 - name: Skydda data
   href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
