--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -12,15 +12,15 @@
     - name: SQL
       items:
         - name: .NET
-          href: create-documentdb-dotnet.md
+          href: create-sql-api-dotnet.md
         - name: Java
-          href: create-documentdb-java.md
+          href: create-sql-api-java.md
         - name: Node.js
-          href: create-documentdb-nodejs.md
+          href: create-sql-api-nodejs.md
         - name: Python
-          href: create-documentdb-python.md
+          href: create-sql-api-python.md
         - name: Xamarin
-          href: create-documentdb-xamarin-dotnet.md
+          href: create-sql-api-xamarin-dotnet.md
     - name: MongoDB
       items:
         - name: Node.js
@@ -72,7 +72,7 @@
     - name: 1 – Skapa
       items:
         - name: SQL
-          href: tutorial-develop-documentdb-dotnet.md
+          href: tutorial-develop-sql-api-dotnet.md
         - name: MongoDB med .NET
           href: tutorial-develop-mongodb.md
         - name: MongoDB med Angular
@@ -98,7 +98,7 @@
     - name: 3 – Fråga
       items:
         - name: SQL
-          href: tutorial-query-documentdb.md
+          href: tutorial-query-sql-api.md
         - name: MongoDB
           href: tutorial-query-mongodb.md
         - name: Tabell
@@ -108,7 +108,7 @@
     - name: 4 – Distribuera globalt
       items:
         - name: SQL
-          href: tutorial-global-distribution-documentdb.md
+          href: tutorial-global-distribution-sql-api.md
         - name: MongoDB
           href: tutorial-global-distribution-mongodb.md
         - name: Tabell
@@ -148,7 +148,7 @@
     - name: 'API:er för flera modeller'
       items:
         - name: SQL
-          href: documentdb-introduction.md
+          href: sql-api-introduction.md
         - name: MongoDB
           href: mongodb-introduction.md
         - name: Tabell
@@ -171,18 +171,18 @@
     - name: Utveckla
       items:
         - name: API för SQL
-          href: documentdb-index.md
+          href: sql-api-index.md
           items:
             - name: Resurser
-              href: documentdb-resources.md
+              href: sql-api-resources.md
             - name: SQL-frågor
-              href: documentdb-sql-query.md
+              href: sql-api-sql-query.md
             - name: SQL-frågeprestanda
-              href: documentdb-sql-query-metrics.md
+              href: sql-api-sql-query-metrics.md
             - name: SQL-spelplan
               href: 'https://www.documentdb.com/sql/demo'
             - name: Partitionering
-              href: documentdb-partition-data.md
+              href: sql-api-partition-data.md
             - name: 'Lagrade procedurer, utlösare och UDF:er'
               href: programming.md
             - name: Prestandatestning
@@ -200,39 +200,39 @@
                 - name: Skriv din första app
                   items:
                     - name: .NET
-                      href: documentdb-get-started.md
+                      href: sql-api-get-started.md
                     - name: .NET Core
-                      href: documentdb-dotnetcore-get-started.md
+                      href: sql-api-dotnetcore-get-started.md
                     - name: Java
-                      href: documentdb-java-get-started.md
+                      href: sql-api-java-get-started.md
                     - name: Node.js
-                      href: documentdb-nodejs-get-started.md
+                      href: sql-api-nodejs-get-started.md
                     - name: C++
-                      href: documentdb-cpp-get-started.md
+                      href: sql-api-cpp-get-started.md
                 - name: Bygga en webbapp
                   items:
                     - name: .NET
-                      href: documentdb-dotnet-application.md
+                      href: sql-api-dotnet-application.md
                     - name: Xamarin
                       href: mobile-apps-with-xamarin.md
                     - name: Node.js
-                      href: documentdb-nodejs-application.md
+                      href: sql-api-nodejs-application.md
                     - name: Java
-                      href: documentdb-java-application.md
+                      href: sql-api-java-application.md
                     - name: Python Flask
-                      href: documentdb-python-application.md
+                      href: sql-api-python-application.md
             - name: Exempel
               items:
                 - name: .NET-exempel
-                  href: documentdb-dotnet-samples.md
+                  href: sql-api-dotnet-samples.md
                 - name: Node.js-exempel
-                  href: documentdb-nodejs-samples.md
+                  href: sql-api-nodejs-samples.md
                 - name: Python-exempel
-                  href: documentdb-python-samples.md
+                  href: sql-api-python-samples.md
             - name: Resurser
               items:
                 - name: Facit för SQL-grammatik
-                  href: documentdb-sql-query-cheat-sheet.md
+                  href: sql-api-sql-query-cheat-sheet.md
                 - name: Stack Overflow
                   href: 'http://stackoverflow.com/questions/tagged/azure-cosmosdb'
                 - name: Videoklipp
@@ -377,7 +377,7 @@
         - name: Utnyttja ODBC-drivrutinen för datavisualisering
           href: odbc-driver.md
         - name: 'Använd Spring Boot Starter med API:er för SQL'
-          href: documentdb-java-spring-boot-starter-with-cosmos-db.md
+          href: /java/azure/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db.md
 - name: Referens
   items:
     - name: Kodexempel
@@ -385,23 +385,23 @@
     - name: 'API:er för SQL'
       items:
         - name: Java
-          href: documentdb-sdk-java.md
+          href: sql-api-sdk-java.md
         - name: .NET
-          href: documentdb-sdk-dotnet.md
+          href: sql-api-sdk-dotnet.md
         - name: .NET-ändringsfeed
-          href: documentdb-sdk-dotnet-changefeed.md
+          href: sql-api-sdk-dotnet-changefeed.md
         - name: .NET Core
-          href: documentdb-sdk-dotnet-core.md
+          href: sql-api-sdk-dotnet-core.md
         - name: Node.js
-          href: documentdb-sdk-node.md
+          href: sql-api-sdk-node.md
         - name: Python
-          href: documentdb-sdk-python.md
+          href: sql-api-sdk-python.md
         - name: REST
           href: /rest/api/documentdb/
         - name: REST-resursprovider
           href: /rest/api/documentdbresourceprovider/
         - name: SQL
-          href: documentdb-sql-query-reference.md
+          href: sql-api-sql-query-reference.md
     - name: 'Tabell-API:er'
       items:
         - name: .NET
