--- a/articles/azure-stack/user/TOC.yml
+++ b/articles/azure-stack/user/TOC.yml
@@ -43,6 +43,8 @@
               href: azure-stack-compute-overview.md
             - name: Överväganden för virtuella datorer
               href: azure-stack-vm-considerations.md
+            - name: Hantera Virtuella diskar
+              href: azure-stack-manage-vm-disks.md
         - name: Lagring
           items:
             - name: Översikt
