Commit translated content

--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -32,6 +32,8 @@
       href: how-to-deploy-monitor.md
     - name: Etablera en IoT Core-enhet
       href: how-to-install-iot-core.md
+    - name: Felsöka
+      href: troubleshoot.md
 - name: Koncept
   items:
     - name: IoT Edge-moduler
