--- a/articles/machine-learning/team-data-science-process/toc.yml
+++ b/articles/machine-learning/team-data-science-process/toc.yml
@@ -47,6 +47,8 @@
     - name: Azure Machine Learning
       href: walkthroughs-aml-with-tdsp.md
       items:
+        - name: Sentimentklassificering
+          href: predict-twitter-sentiment.md
         - name: Amerikansk intäktsklassificering
           href: ../preview/scenario-tdsp-classifying-us-incomes.md
           maintainContext: true
