--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -51,6 +51,8 @@
           href: app-insights-windows-desktop.md
         - name: ASP.NET Core
           href: app-insights-asp-net-core.md
+        - name: Konsolen
+          href: application-insights-console.md
     - name: Övervaka Java-appar
       items:
         - name: Webbappar
