--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -24,6 +24,8 @@
   items:
     - name: Planera och designa
       items:
+        - name: Alternativ för lagringskontot
+          href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Planera för distribution av Azure Files
           href: storage-files-planning.md
         - name: Så här distribuerar du Azure Files
@@ -64,7 +66,7 @@
               href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Konfigurera anslutningssträngar
           href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Använd Azure Storage REST API
+        - name: Använda Azure Storage REST API
           href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Hantera
       items:
