--- a/articles/machine-learning/preview/toc.yml
+++ b/articles/machine-learning/preview/toc.yml
@@ -180,6 +180,8 @@
           href: release-notes-sprint-1.md
         - name: Sprint 2 – december 2017
           href: release-notes-sprint-2.md
+        - name: Sprint 2 QFE – december 2017
+          href: release-notes-sprint-2.1.md
 - name: Resurser
   items:
     - name: Vanliga frågor och svar
