--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -47,6 +47,8 @@
       href: ../azure-resource-manager/resource-group-create-service-principal-portal.md?toc=%2fazure%2fcontainer-registry%2ftoc.json
     - name: Autentisera med ett register
       href: container-registry-authentication.md
+    - name: Uppgradera ett klassiskt register
+      href: container-registry-upgrade.md
     - name: Använda ACR-webhooks
       href: ./container-registry-webhook.md
 - name: Referens
