--- a/articles/location-based-services/index.yml
+++ b/articles/location-based-services/index.yml
@@ -14,11 +14,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 11/22/2017
   ms.author: philmea
-  ms.openlocfilehash: fa69448296105ce8fd3cc1b885c3aa793882f909
-  ms.sourcegitcommit: 310748b6d66dc0445e682c8c904ae4c71352fef2
+  ms.openlocfilehash: d3a547418d9b5c412584aaa2f27a40024130335b
+  ms.sourcegitcommit: b7adce69c06b6e70493d13bc02bd31e06f291a91
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 11/28/2017
+  ms.lasthandoff: 12/19/2017
 abstract:
   description: "Azure Location Based Services (förhandsversion) ger utvecklare från alla branscher kraftfulla geospatiala funktioner med nya mappningsdata som krävs för att tillhandahålla geografisk kontext till webb- och mobilprogram. Den här tjänsten är en uppsättning REST API:er som är kompatibla med Azure One API och som åtföljs av en webbaserad JavaScript-kontroll som gör utveckling över flera medier enkelt, flexibelt och portabelt."
 sections:
@@ -43,3 +43,13 @@ sections:
     - html: "<a href=\"/azure/location-based-services/tutorial-search-location\">Sök efter orienteringspunkter</a>"
     - html: <a href="/azure/location-based-services/tutorial-route-location">Dirigera till en orienteringspunkt</a>
     - html: "<a href=\"/azure/location-based-services/tutorial-prioritized-routes\">Vägar efter färdsätt</a>"
+- title: Referens
+  items:
+  - type: list
+    style: cards
+    className: cardsW
+    items:
+    - title: "Språk"
+      html: "<p><a href=\"https://docs.microsoft.com/en-us/javascript/api/location-based-services-javascript/\">API för kartkontroll – Javascript</a></p>"
+    - title: REST
+      html: "<p><a href=\"https://docs.microsoft.com/en-us/rest/api/location-based-services/\">Funktions-API – REST</a></p><p><a href=\"https://docs.microsoft.com/en-us/rest/api/location-based-services-management/\">API för hantering – REST</a></p>"
